# xchat-bot-starter-pro

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  security.yml
bots/: draft_reply_bot.py  handoff_bot.py
docs/: known-caveats.md  troubleshooting.md
examples/: docker-compose.yml
src/xchat_bot/: __init__.py  env.example
src/xchat_bot/auth/: oauth.py  token_store.py  unlock.py
src/xchat_bot/bot/: base.py
src/xchat_bot/chat/: __init__.py  api.py
src/xchat_bot/cli/: app.py  cmd_auth.py  cmd_dm.py  cmd_doctor.py  cmd_init.py  cmd_inspect.py  cmd_replay.py  cmd_run.py  cmd_subscribe.py  cmd_subscriptions.py  cmd_unlock.py  cmd_webhook.py
src/xchat_bot/config/: settings.py
src/xchat_bot/crypto/: base.py  real.py  stub.py
src/xchat_bot/events/: dedup.py  models.py  normalizer.py
src/xchat_bot/examples/: draft_reply_bot.py  echo_bot.py  handoff_bot.py  moderation_bot.py  router_bot.py
src/xchat_bot/logging/: setup.py
src/xchat_bot/reply/: adapter.py  x_api.py
src/xchat_bot/state/: manager.py
src/xchat_bot/transport/: base.py  stream.py  webhook.py
src/xchat_bot/webhook/: app.py  crc.py  signature.py
tests/: conftest.py
tests/bots/: test_echo_bot.py  test_moderation_bot.py  test_router_bot.py
tests/fixtures/: batch_events.jsonl  chat_received_demo.json  chat_received_observed_xchat.json  chat_received_official.json  chat_sent.json  conversation_join.json  profile_update_bio.json  state_stub.json
tests/fixtures/real/: README.md  chat_received_20260419_meta.json
tests/integration/: test_webhook_app.py
tests/unit/: test_chat_api.py  test_crc.py  test_crypto_real.py  test_crypto_stub.py  test_dedup.py  test_logging_setup.py  test_normalizer.py  test_normalizer_chat_fields.py  test_reply_modes.py  test_settings.py  test_signature.py  test_state_manager.py  test_subscription_validation.py  test_token_store.py  test_transport_base.py  test_transport_stream.py  test_transport_webhook.py  test_unlock.py  test_x_api.py
