[build-system]
requires = ["hatchling", "editables"]
build-backend = "hatchling.build"

[project]
name = "xchat-bot-starter-pro"
version = "0.1.1"
description = "Starter kit for building XChat bots on the X Activity API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "xchat-bot-starter-pro contributors" }]
keywords = ["xchat", "twitter", "x", "bot", "dm", "activity-api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "typer>=0.12",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "tenacity>=8.3",
    "cryptography>=42.0",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "anyio>=4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx",
    "ruff>=0.4",
    "pyright>=1.1",
    "pip-audit>=2.7",
]

[project.scripts]
xchat = "xchat_bot.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/xchat_bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: pure unit tests, no I/O",
    "integration: may use httpx or event loop",
    "slow: longer running tests",
]

[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "ANN"]
ignore = [
    "S101",   # assert is fine in tests and bot code
    "B008",   # typer.Option() in function defaults is the documented typer pattern
    "S105",   # URL constants named *_TOKEN_URL are not passwords
    "S104",   # 0.0.0.0 bind is intentional for the webhook server
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S"]
"bots/**" = ["ANN"]
"src/xchat_bot/examples/**" = ["ANN"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["src"]
exclude = ["tests"]
venvPath = "."
venv = ".venv"

# Per-file overrides for patterns that pyright strict cannot handle cleanly:
#
# - webhook/app.py: FastAPI @app.route() decorated functions look "unused" to pyright;
#   this is a known pyright limitation with decorator-based registration.
# - events/normalizer.py: dict.get() on json.loads() output returns Any; the
#   Unknown propagation is unavoidable without full runtime type guards.
# - cli/cmd_replay.py, cli/cmd_inspect.py: json.loads() returns Any by design;
#   these are CLI tools that handle arbitrary external data.
[[tool.pyright.executionEnvironments]]
root = "src/xchat_bot/webhook"
reportUnusedFunction = "none"

[[tool.pyright.executionEnvironments]]
root = "src/xchat_bot/events"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportCallIssue = "none"

[[tool.pyright.executionEnvironments]]
root = "src/xchat_bot/cli"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportReturnType = "none"

[[tool.pyright.executionEnvironments]]
root = "src/xchat_bot/examples"
reportUnknownVariableType = "none"
reportArgumentType = "none"

[tool.coverage.run]
source = ["src/xchat_bot"]
omit = [
    "*/tests/*",
    # CLI entry points: require a real terminal / subprocess to test meaningfully.
    # Integration-tested via `xchat doctor` smoke tests in CI, not unit coverage.
    "src/xchat_bot/cli/*",
    # Example bots: user-facing starter code, not library code.
    # Covered by tests/bots/ which import them directly.
    "src/xchat_bot/examples/*",
    # OAuth flow: requires browser interaction and live X API endpoints.
    # Not unit-testable without significant mocking of external services.
    "src/xchat_bot/auth/oauth.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
